Closed Bug 988877 Opened 10 years ago Closed 10 years ago

MediaManager threads are not ended by the end of xpcom-shutdown-threads

Categories

(Core :: WebRTC: Audio/Video, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla32
Tracking Status
firefox29 --- wontfix
firefox30 --- wontfix
firefox31 --- wontfix
firefox32 --- fixed
firefox-esr24 --- wontfix
b2g-v2.0 --- fixed

People

(Reporter: jesup, Assigned: jesup)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

With the patch from bug 988464, we see MediaManager threads still active (if getUserMedia() has been used) after xpcom-shutdown-threads (which is after xpcom-shutdown).

I have a patch for this.
Summary: MediaMaanger threads are not ended by the end of xpcom-shutdown-threads → MediaManager threads are not ended by the end of xpcom-shutdown-threads
Blocks: 1008619
Comment on attachment 8398018 [details] [diff] [review]
Shut down MediaManager thread in xpcom-shutdown

Pretty simple patch
Attachment #8398018 - Flags: review?(benjamin)
Attachment #8398018 - Flags: review?(benjamin) → review+
https://hg.mozilla.org/integration/mozilla-inbound/rev/bae77efb22ff

Probably we should wontfix everything except maybe aurora.
Target Milestone: --- → mozilla32
https://hg.mozilla.org/mozilla-central/rev/bae77efb22ff
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Did we want this on beta31 as well?
Flags: needinfo?(rjesup)
Flags: needinfo?(rjesup)
Blocks: 988464
No longer depends on: 988464
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: