Bug 988877: Shut down MediaManager thread in xpcom-shutdown r=bsmedberg